# tiny_pbrt

tiny_pbrt/: CMakeLists.txt  camera.cpp  camera.h  error.cpp  error.h  fileutil.cpp  fileutil.h  film.cpp  film.h  material.cpp  material.h  memory.cpp  memory.h  parallel.cpp  parallel.h  pbrt.h  primitive.cpp  primitive.h  sampler.cpp  sampler.h  sampling.cpp  sampling.h  scene.cpp  scene.h  shape.cpp  shape.h  stats.cpp  stats.h
tiny_pbrt/accelarator/: kdtreeaccel.cpp  kdtreeaccel.h
tiny_pbrt/cameras/: environment.cpp  environment.h  perspective.cpp  perspective.h
tiny_pbrt/lights/: diffuse.cpp  diffuse.h  distant.cpp  distant.h
tiny_pbrt/materials/: bssrdf.cpp  bssrdf.h  subsurface.cpp  subsurface.h
tiny_pbrt/samplers/: halton.cpp  halton.h  stratified.cpp  stratified.h
